# github-actions-cpp

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp  simple_math.hpp  test_simple_math.cpp
.github/workflows/: ci.yml
cmake/: ConanSetup.cmake  DefaultConfiguration.cmake  Warnings.cmake
libsimple_math/: CMakeLists.txt
libsimple_math/include/simple_math/: simple_math.hpp
libsimple_math/src/: simple_math.cpp
libsimple_math/test/: CMakeLists.txt  test_simple_math.cpp
